--- a/main.html
+++ b/main.html
@@ -36,13 +36,12 @@
 	<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="Image"></li>
 		<li>
-			<video controls>
+			<video type="video/mp4" width="300px" height="240px" controls>
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 			</video>
 		</li>
 		<li>
-			<audio controls>
-				<source src="http://commondatastorage.googleapis. com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
 			</audio>
 		</li>
 	</ol>
